# mrhpsspeech

./: .gitignore  AUTHORS.txt  CMakeLists.txt  README.md  README.txt  TODO.txt  VERSION.txt
doc/source/: conf.py  index.rst
doc/source/Building/: Building.rst
doc/source/Building/Dependencies/: Google_Cloud_API.rst
doc/source/Callbacks/: Callbacks.rst
doc/source/Callbacks/Service/: CBAvail.rst  CBCustomCommand.rst
doc/source/Callbacks/Speech/: CBNotification.rst  CBSayString.rst  CBSpeechMethod.rst
doc/source/Configuration_File/: Configuration_File.rst
doc/source/Configuration_File/API_Provider/: Google_Cloud_API.rst
doc/source/Service_Info/: Service_Info.rst
doc/source/Speech_Input/: Speech_Input.rst
doc/source/Speech_Input/Source/: Text_String.rst  Voice.rst
doc/source/Speech_Method/: Speech_Method.rst
doc/source/Speech_Output/: Speech_Output.rst
doc/source/Speech_Output/Source/: Text_String.rst  Voice.rst
src/: Configuration.cpp  Configuration.h  Main.cpp
src/Callback/Say/: CBSayString.cpp  CBSayString.h
src/Callback/Service/: CBAvail.cpp  CBAvail.h  CBReset.cpp  CBReset.h
src/Callback/Speech/: CBNotification.cpp  CBNotification.h  CBRemoteNotification.cpp  CBRemoteNotification.h  CBSayString.cpp  CBSayString.h  CBSpeechMethod.cpp  CBSpeechMethod.h
src/Speech/: LocalStream.cpp  LocalStream.h  OutputStorage.cpp  OutputStorage.h  Speech.cpp  Speech.h  SpeechEvent.cpp  SpeechEvent.h  SpeechMethod.cpp  SpeechMethod.h
src/Speech/CLI/: CLI.cpp  CLI.h
src/Speech/Method/: CLI.cpp  CLI.h  Server.cpp  Server.h  Voice.cpp  Voice.h
src/Speech/Method/MessageStream/: MessageOpCode.cpp  MessageOpCode.h  MessageStream.cpp  MessageStream.h
src/Speech/Method/MessageStream/IO/: MessageRead.cpp  MessageRead.h  MessageWrite.cpp  MessageWrite.h
src/Speech/Method/Voice/: AudioDevice.cpp  AudioDevice.h  AudioDeviceOpCode.h  AudioDevicePool.cpp  AudioDevicePool.h  AudioSample.cpp  AudioSample.h  AudioStream.cpp  AudioStream.h  AudioStreamOpCode.h  AudioTrack.cpp  AudioTrack.h  GoogleAPI.cpp  GoogleAPI.h  GoogleCloudAPI.cpp  GoogleCloudAPI.h  GoogleSTT.cpp  GoogleSTT.h  GoogleTTS.cpp  GoogleTTS.h  MonoAudio.cpp  MonoAudio.h  PADevice.cpp  PADevice.h  PAMicrophone.cpp  PAMicrophone.h  PASpeaker.cpp  PASpeaker.h  PASpeakerSound.h  PocketSphinx.cpp  PocketSphinx.h  RateConverter.cpp  RateConverter.h  ReadAudio.cpp  ReadAudio.h  VoiceAudio.cpp  VoiceAudio.h
src/Speech/Method/Voice/Audio/: HandleAudio.cpp  HandleAudio.h  ReadAudio.cpp  ReadAudio.h
src/Speech/Method/Voice/AudioDevice/: AudioDevice.cpp  AudioDevice.h  AudioDeviceOpCode.cpp  AudioDeviceOpCode.h  AudioDeviceTraffic.cpp  AudioDeviceTraffic.h
src/Speech/Source/: AudioStream.cpp  AudioStream.h  CLIStream.cpp  CLIStream.h  LocalStream.cpp  LocalStream.h  NetServer.cpp  NetServer.h  TextString.cpp  TextString.h  Voice.cpp  Voice.h
src/Speech/Source/APIProvider/: APIProvider.h  GoogleCloudAPI.cpp  GoogleCloudAPI.h
src/Speech/Source/Audio/: AudioBuffer.cpp  AudioBuffer.h
src/Speech/Source/MessageStream/: MessageOpCode.cpp  MessageOpCode.h  MessageStream.cpp  MessageStream.h
src/Speech/Source/MessageStream/IO/: MessagePacket.h  MessageRead.cpp  MessageRead.h  MessageWrite.cpp
src/Speech/Source/Provider/: GoogleCloudAPI.cpp
tools/mrhclispeech/: CMakeLists.txt  README.txt  TODO.txt  VERSION.txt
tools/mrhclispeech/src/: Main.cpp
tools/mrhclispeech/src/MessageStream/: MessageOpCode.cpp  MessageOpCode.h  MessageStream.cpp  MessageStream.h
tools/mrhclispeech/src/MessageStream/IO/: MessagePacket.h  MessageRead.cpp  MessageRead.h  MessageWrite.cpp  MessageWrite.h
tools/mrhlaudiodev/: CMakeLists.txt  README.txt  TODO.txt  VERSION.txt
tools/mrhlaudiodev/src/: Main.cpp
tools/mrhlaudiodev/xcode/mrhlaudiodev/mrhlaudiodev.xcodeproj/: project.pbxproj
tools/mrhlaudiodev/xcode/mrhlaudiodev/mrhlaudiodev.xcodeproj/project.xcworkspace/xcuserdata/Jens.xcuserdatad/: UserInterfaceState.xcuserstate
tools/mrhlaudiodev/xcode/mrhlaudiodev/mrhlaudiodev.xcodeproj/xcuserdata/Jens.xcuserdatad/xcschemes/: xcschememanagement.plist
